--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,178 @@
-@keyframes shake {
-  0% {
-    transform: translateX(0);
-  }
-  25% {
-    transform: translateX(-5px);
-  }
-  50% {
-    transform: translateX(5px);
-  }
-  75% {
-    transform: translateX(-5px);
-  }
-  100% {
-    transform: translateX(0);
-  }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-size: 20px;
+  cursor: default;
+  transition: background 0.2s;
 }
+
+:root {
+  --background-color: black;
+  --game-color: black;
+  --line-color: black;
+}
+
+body {
+  background: var(--background-color);
+  min-width: 800px;
+  height: 100vh;
+  overflow-y: hidden;
+}
+
+::selection {
+  background: transparent;
+}
+
+header {
+  position: absolute;
+  top: 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: max(100%, 800px);
+  background: var(--background-color);
+  z-index: 2;
+}
+
+.timer-side,
+.timer-game {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.timer-side div,
+.timer-side span,
+.timer-game div,
+.timer-game span {
+  font-size: max(3.37vh, 1rem);
+  padding: 0.56vh;
+}
+
+h1 {
+  font-size: max(5.61vh, 1.7rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 0.28vh 0 rgba(98, 0, 255, 0.25), -0.28vh 0 rgba(255, 0, 0, 0.25);
+}
+
+.ready-screen {
+  box-shadow: inset 0px 0px 600px 260px var(--background-color);
+  width: min(900px, 80vw);
+  min-width: 800px;
+  height: min(550px, 90vh);
+  min-height: 450px;
+  padding-bottom: 60px;
+  position: absolute;
+  top: 52%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  transition: opacity 0.3s, background 0.2s, box-shadow 0.2s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.ready-screen__text {
+  font-size: 3rem;
+  text-shadow: 0 2px 5px var(--line-color);
+}
+.ready-screen__ready {
+  font-size: 1.5rem;
+  padding: 15px;
+  width: 170px;
+  margin-top: 60px;
+  border-radius: 5px;
+  background: var(--game-color);
+  cursor: pointer;
+  box-shadow: 0 3px 3px var(--line-color);
+  border: 2px solid var(--line-color);
+  transition: letter-spacing 0.2s, transform 0.2s, box-shadow 0.2s, background 0.2s;
+}
+.ready-screen__ready:hover {
+  letter-spacing: 1px;
+}
+.ready-screen__ready:active {
+  letter-spacing: 0.5px;
+  box-shadow: 0 1px 3px var(--line-color), inset 0 0 10px var(--line-color);
+  transform: translate(0, 2px);
+}
+
+.setting-btns {
+  border-top: 1px solid var(--game-color);
+  position: absolute;
+  transform: translate(-50%, -50%);
+  width: max(100%, 800px);
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5px;
+  align-items: flex-start;
+  gap: 50px;
+  transition: bottom 400ms 100ms, background 0.2s;
+  z-index: 2;
+  left: 50%;
+  bottom: -300px;
+  padding-top: 20px;
+  background: var(--game-color);
+  box-shadow: inset 0px 0px 70px 80px var(--background-color);
+  transition: bottom 0.3s, background 0.2s, box-shadow 0.2s;
+  z-index: 3;
+}
+.setting-btns button {
+  width: 250px;
+  height: 60px;
+  border-radius: 5px;
+  border: 2px solid var(--game-color);
+  background: var(--background-color);
+  box-shadow: 0 3px 3px var(--line-color);
+  transition: transform 0.15s, box-shadow 0.15s, background 0.2s;
+  cursor: pointer;
+}
+.setting-btns button form,
+.setting-btns button label,
+.setting-btns button input {
+  cursor: pointer;
+}
+.setting-btns button:active {
+  box-shadow: 0 1px 3px var(--line-color);
+  transform: translate(0, 2px);
+}
+.setting-btns__nav {
+  position: absolute;
+  top: -30px;
+  border: 1px solid var(--line-color);
+  background: var(--game-color);
+  color: var(--background-color);
+  width: 45px;
+  height: 30px;
+  border-radius: 5px 5px 0 0;
+  opacity: 0.3;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background 0.2s, opacity 0.2s;
+}
+.setting-btns__nav:hover {
+  opacity: 1;
+  transition: background 0.2s, opacity 0.1s;
+}
+.setting-btns__nav div {
+  transform: rotate(-90deg);
+  font-weight: 600;
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  cursor: pointer;
+}
+.setting-btns .checkbox-inp {
+  transform: scale(1.4) translate(3px, 1px);
+}
+
 main {
-  width: 100%;
   width: 400px;
   height: 400px;
   position: absolute;
@@ -170,8 +326,10 @@ input[type=checkbox] {
   display: none;
   opacity: 0;
   box-shadow: inset 0px 0px 600px 260px var(--background-color);
-  width: 900px;
-  height: 550px;
+  width: min(900px, 80vw);
+  min-width: 800px;
+  height: min(550px, 90vh);
+  min-height: 450px;
   padding-bottom: 60px;
   position: absolute;
   top: 52%;
@@ -203,7 +361,7 @@ input[type=checkbox] {
 .end-screen-btns {
   position: absolute;
   transform: translate(-50%, -50%);
-  width: 100%;
+  width: max(100%, 800px);
   height: 200px;
   display: flex;
   justify-content: center;
@@ -236,174 +394,20 @@ input[type=checkbox] {
   transform: translate(0, 2px);
 }
 
-header {
-  position: absolute;
-  top: 0;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  width: 100%;
-  background: var(--background-color);
-  z-index: 2;
-}
-
-.timer-side,
-.timer-game {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.timer-side div,
-.timer-side span,
-.timer-game div,
-.timer-game span {
-  font-size: 3.37vh;
-  padding: 0.56vh;
-}
-
-h1 {
-  font-size: 5.61vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-shadow: 0.28vh 0 rgba(98, 0, 255, 0.25), -0.28vh 0 rgba(255, 0, 0, 0.25);
-}
-
-.ready-screen {
-  box-shadow: inset 0px 0px 600px 260px var(--background-color);
-  width: 900px;
-  height: 550px;
-  padding-bottom: 60px;
-  position: absolute;
-  top: 52%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  transition: opacity 0.3s, background 0.2s, box-shadow 0.2s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.ready-screen__text {
-  font-size: 3rem;
-  text-shadow: 0 2px 5px var(--line-color);
-}
-.ready-screen__ready {
-  font-size: 1.5rem;
-  padding: 15px;
-  width: 170px;
-  margin-top: 60px;
-  border-radius: 5px;
-  background: var(--game-color);
-  cursor: pointer;
-  box-shadow: 0 3px 3px var(--line-color);
-  border: 2px solid var(--line-color);
-  transition: letter-spacing 0.2s, transform 0.2s, box-shadow 0.2s, background 0.2s;
-}
-.ready-screen__ready:hover {
-  letter-spacing: 1px;
-}
-.ready-screen__ready:active {
-  letter-spacing: 0.5px;
-  box-shadow: 0 1px 3px var(--line-color), inset 0 0 10px var(--line-color);
-  transform: translate(0, 2px);
-}
-
-.setting-btns {
-  border-top: 1px solid var(--game-color);
-  position: absolute;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 5px;
-  align-items: flex-start;
-  gap: 50px;
-  transition: bottom 400ms 100ms, background 0.2s;
-  z-index: 2;
-  left: 50%;
-  bottom: -300px;
-  padding-top: 20px;
-  background: var(--game-color);
-  box-shadow: inset 0px 0px 70px 80px var(--background-color);
-  transition: bottom 0.3s, background 0.2s, box-shadow 0.2s;
-  z-index: 4;
-}
-.setting-btns button {
-  width: 250px;
-  height: 60px;
-  border-radius: 5px;
-  border: 2px solid var(--game-color);
-  background: var(--background-color);
-  box-shadow: 0 3px 3px var(--line-color);
-  transition: transform 0.15s, box-shadow 0.15s, background 0.2s;
-  cursor: pointer;
-}
-.setting-btns button form,
-.setting-btns button label,
-.setting-btns button input {
-  cursor: pointer;
-}
-.setting-btns button:active {
-  box-shadow: 0 1px 3px var(--line-color);
-  transform: translate(0, 2px);
-}
-.setting-btns__nav {
-  position: absolute;
-  top: -30px;
-  border: 1px solid var(--line-color);
-  background: var(--game-color);
-  color: var(--background-color);
-  width: 45px;
-  height: 30px;
-  border-radius: 5px 5px 0 0;
-  opacity: 0.3;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background 0.2s, opacity 0.2s;
-}
-.setting-btns__nav:hover {
-  opacity: 1;
-  transition: background 0.2s, opacity 0.1s;
-}
-.setting-btns__nav div {
-  transform: rotate(-90deg);
-  font-weight: 600;
-  font-size: 1.6rem;
-  font-family: sans-serif;
-  cursor: pointer;
-}
-.setting-btns .checkbox-inp {
-  transform: scale(1.4) translate(3px, 1px);
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-size: 20px;
-  cursor: default;
-  transition: background 0.2s;
-}
-
-:root {
-  --background-color: black;
-  --game-color: black;
-  --line-color: black;
-}
-
-body {
-  background: var(--background-color);
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-
-::selection {
-  background: transparent;
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }/*# sourceMappingURL=style.css.map */
